--- a/main/main.vcxproj
+++ b/main/main.vcxproj
@@ -96,9 +96,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="defaults.hpp" />
+    <ClInclude Include="loadobj.hpp" />
+    <ClInclude Include="model.hpp" />
+    <ClInclude Include="simple_mesh.hpp" />
+    <ClInclude Include="texture.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="loadobj.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="model.cpp" />
+    <ClCompile Include="simple_mesh.cpp" />
+    <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vmlib\vmlib.vcxproj">
