--- a/assets/main-shaders.vcxproj
+++ b/assets/main-shaders.vcxproj
@@ -50,6 +50,10 @@
   <ItemGroup>
     <None Include="default.frag" />
     <None Include="default.vert" />
+    <None Include="frag2.frag" />
+    <None Include="frag3.frag" />
+    <None Include="vert2.vert" />
+    <None Include="vert3.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
